<menu xmlns:android="http://schemas.android.com/apk/res/android" >


    <item
        android:id="@+id/menu_item_hot"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_hot"/>
    <item
        android:id="@+id/menu_item_top"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_top"/>
    <item
        android:id="@+id/menu_item_collection"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_collection"/>
    <item
        android:id="@+id/menu_item_search"
        android:showAsAction="withText"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/menu_item_refresh"
        android:showAsAction="withText"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/menu_item_bgg_info"
        android:showAsAction="withText"
        android:title="@string/bgg_info"/>
</menu>
